@@ -58,7 +58,7 @@
      <tr valign=top bgcolor=silver>
         <th><a href="valid">Valid</a></th>
         <td>A demonstration (well, more of a testing ground) of the validating text fields, including the new (as of release 1.0.1)
-        NumericField.</td>
+        NumericField.  Also shows off the new Palette component.</td>
       </tr>
       
   <tr valign=top>
